--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
       # Build solo del proyecto principal que se va a publicar
       - run: npx nx build hunt-the-bishomalo --configuration=production
 
-      # Despliegue a GitHub Pages
+      # Despliegue a GitHub Pagess
       - name: Deploy to GitHub Pages
         if: github.ref == 'refs/heads/master' && github.event_name == 'push'
         uses: peaceiris/actions-gh-pages@v3
