--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
       - run: npx nx run-many -t lint test
 
       # Build solo del proyecto principal que se va a publicar
-      - run: npx nx build hunt-the-bishomalo --configuration=production
+      - run: npx nx build hunt-the-bishomalo --configuration=production --base-href="https://chdelucia.github.io/hunt-the-bishomalo/"
 
       # Despliegue a GitHub Pagess
       - name: Deploy to GitHub Pages
