ignore config files to coverage

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,7 +9,7 @@ sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 sonar.sources=src
-sonar.exclusions=**/node_modules/**,**/.vscode/**,**/dist/**
+sonar.exclusions=**/node_modules/**,**/.vscode/**,**/dist/**,**.config.ts,main.ts,**routes.ts,test-setup.ts
 
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
