--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "nx serve",
     "build": "nx build",
-    "test": "nx test --runInBand --color"
+    "test": "nx test"
   },
   "private": true,
   "dependencies": {
