--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,13 @@ jobs:
 
       - run: npm ci --legacy-peer-deps
 
+      - name: Validate commit messages
+        run: |
+          npm install --no-save @commitlint/{cli,config-conventional}
+          npx commitlint --from=HEAD~10 --to=HEAD --verbose
+        continue-on-error: true
+
+
       - run: npx cypress install
 
       # ✅ Lint y test con coverage
@@ -44,3 +51,21 @@ jobs:
         uses: SonarSource/sonarqube-scan-action@v5
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      
+      # ✅ Auto-versioning with standard-version changelog
+      - name: Create Release with standard-version
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+
+          npm install --no-save standard-version
+          npx standard-version
+          git push --follow-tags origin master
+
+      # ✅ Publicar GitHub Release
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v2
+        with:
+          generate_release_notes: true
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
