--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "@hunt-the-bishomalo/source",
-  "version": "0.0.0",
+  "version": "1.0.1",
   "license": "MIT",
   "scripts": {
     "start": "nx serve",
     "build": "nx build",
-    "test": "nx test"
+    "test": "nx test",
+    "release": "standard-version",
+    "prepare": "husky install",
+    "changelog": "standard-version --skip.tag=true --skip.commit=true"
   },
   "private": true,
   "dependencies": {
@@ -26,6 +29,8 @@
     "@angular/cli": "~19.2.0",
     "@angular/compiler-cli": "~19.2.0",
     "@angular/language-service": "~19.2.0",
+    "@commitlint/cli": "^19.8.1",
+    "@commitlint/config-conventional": "^19.8.1",
     "@eslint/js": "^9.8.0",
     "@nx/angular": "21.0.3",
     "@nx/cypress": "21.0.3",
@@ -47,11 +52,13 @@
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.0.0",
     "eslint-plugin-cypress": "^3.5.0",
+    "husky": "^8.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-preset-angular": "~14.4.0",
     "nx": "21.0.3",
     "prettier": "^2.6.2",
+    "standard-version": "^9.5.0",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
