--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-preset-angular": "~14.4.0",
+    "lint-staged": "^16.0.0",
     "nx": "21.0.3",
     "prettier": "^2.6.2",
     "standard-version": "^9.5.0",
