--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - master
+    tags-ignore:
+      - '*'
   pull_request:
     types: [opened, synchronize, reopened]
 
@@ -13,6 +15,7 @@ permissions:
 
 jobs:
   build-test-deploy:
+    if: github.actor != 'github-actions[bot]'
     runs-on: ubuntu-latest
 
     steps:
