fix(ci): fix posible fallo de desincronizacion antes del push

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,6 +63,7 @@ jobs:
 
           npx standard-version --commit-all --no-verify
 
+          git pull origin master --rebase
           git push origin master --follow-tags
           echo "new_tag=$(git describe --tags --abbrev=0)" >> $GITHUB_OUTPUT
 
