--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "test": "nx test",
     "release": "standard-version",
     "prepare": "husky install",
-    "changelog": "standard-version --skip.tag=true --skip.commit=true"
+    "changelog": "standard-version --skip.tag=true --skip.commit=true",
+    "i18n:extract": "transloco-keys-manager extract",
+    "i18n:find": "transloco-keys-manager find"
   },
   "private": true,
   "dependencies": {
@@ -33,6 +35,8 @@
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
     "@eslint/js": "^9.8.0",
+    "@jsverse/transloco": "^7.6.1",
+    "@jsverse/transloco-keys-manager": "^6.1.0",
     "@nx/angular": "21.0.3",
     "@nx/cypress": "21.0.3",
     "@nx/eslint": "21.0.3",
@@ -57,6 +61,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-preset-angular": "~14.4.0",
+    "ngx-build-plus": "^19.0.0",
     "nx": "21.0.3",
     "prettier": "^2.6.2",
     "standard-version": "^9.5.0",
