--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,11 +39,11 @@ jobs:
       # ✅ Lint y test con coverage
       - name: Lint and Test with Coverage
         run: |
-          npx nx affected -t lint test --base=origin/main --head=HEAD --coverage --coverageReporters=lcov
+          npx nx affected -t lint test --base=origin/master --head=HEAD -- --coverage --coverageReporters=lcov
 
       # ✅ Build Angular App
       - name: Build App
-        run: npx nx build hunt-the-bishomalo --configuration=production"
+        run: npx nx build hunt-the-bishomalo --configuration=production
 
       # ✅ SonarCloud Scan
       - name: SonarCloud Scan
