--- a/package.json
+++ b/package.json
@@ -15,62 +15,62 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "~19.2.0",
-    "@angular/compiler": "~19.2.0",
-    "@angular/core": "~19.2.0",
-    "@angular/forms": "~19.2.0",
-    "@angular/platform-browser": "~19.2.0",
-    "@angular/platform-browser-dynamic": "~19.2.0",
-    "@angular/router": "~19.2.0",
-    "@ngrx/signals": "^19.2.0",
+    "@angular/common": "20.3.13",
+    "@angular/compiler": "20.3.13",
+    "@angular/core": "20.3.13",
+    "@angular/forms": "20.3.13",
+    "@angular/platform-browser": "20.3.13",
+    "@angular/platform-browser-dynamic": "20.3.13",
+    "@angular/router": "20.3.13",
+    "@ngrx/signals": "^20.0.0",
     "rxjs": "~7.8.0",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~19.2.0",
-    "@angular-devkit/core": "~19.2.0",
-    "@angular-devkit/schematics": "~19.2.0",
-    "@angular/cli": "~19.2.0",
-    "@angular/compiler-cli": "~19.2.0",
-    "@angular/language-service": "~19.2.0",
+    "@angular-devkit/build-angular": "20.3.9",
+    "@angular-devkit/core": "20.3.9",
+    "@angular-devkit/schematics": "20.3.9",
+    "@angular/cli": "^21.0.0",
+    "@angular/compiler-cli": "20.3.13",
+    "@angular/language-service": "20.3.13",
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
     "@eslint/js": "^9.8.0",
     "@jsverse/transloco": "^7.6.1",
     "@jsverse/transloco-keys-manager": "^6.1.0",
-    "@nx/angular": "21.0.3",
-    "@nx/cypress": "21.0.3",
-    "@nx/eslint": "21.0.3",
-    "@nx/eslint-plugin": "21.0.3",
-    "@nx/jest": "21.0.3",
-    "@nx/js": "21.0.3",
-    "@nx/web": "21.0.3",
-    "@nx/workspace": "21.0.3",
-    "@schematics/angular": "~19.2.0",
+    "@nx/angular": "22.1.0",
+    "@nx/cypress": "22.1.0",
+    "@nx/eslint": "22.1.0",
+    "@nx/eslint-plugin": "22.1.0",
+    "@nx/jest": "22.1.0",
+    "@nx/js": "22.1.0",
+    "@nx/web": "22.1.0",
+    "@nx/workspace": "22.1.0",
+    "@schematics/angular": "20.3.9",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@types/jest": "^29.5.12",
     "@types/node": "18.16.9",
-    "@typescript-eslint/utils": "^8.19.0",
-    "angular-eslint": "^19.2.0",
-    "cypress": "^14.2.1",
+    "@typescript-eslint/utils": "8.40.0",
+    "angular-eslint": "20.3.0",
+    "cypress": "15.6.0",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.0.0",
     "eslint-plugin-cypress": "^3.5.0",
     "husky": "^8.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "jest-preset-angular": "~14.4.0",
+    "jest-preset-angular": "14.6.2",
     "ngx-build-plus": "^19.0.0",
-    "nx": "21.0.3",
+    "nx": "22.1.0",
     "prettier": "^2.6.2",
     "standard-version": "^9.5.0",
-    "ts-jest": "^29.1.0",
+    "ts-jest": "29.4.5",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
-    "typescript": "~5.7.2",
-    "typescript-eslint": "^8.19.0"
+    "typescript": "5.9.3",
+    "typescript-eslint": "8.40.0"
   },
   "nx": {
     "includedScripts": []
