--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,71 +9,118 @@ on:
 
 permissions:
   actions: read
-  contents: write  # Necesario para subir a gh-pages
+  contents: write
+
+env:
+  NODE_VERSION: '20'
+  CACHE_DEPENDENCY_PATH: package-lock.json
 
 jobs:
-  build-test-deploy:
+  setup:
     runs-on: ubuntu-latest
+    outputs:
+      cache-key: ${{ steps.cache-key.outputs.key }}
+    steps:
+      - uses: actions/checkout@v4
 
+      - name: Generate cache key
+        id: cache-key
+        run: echo "key=${{ runner.os }}-node-${{ env.NODE_VERSION }}-${{ hashFiles(env.CACHE_DEPENDENCY_PATH) }}" >> $GITHUB_OUTPUT
+
+  validate:
+    runs-on: ubuntu-latest
+    needs: setup
+    continue-on-error: true
     steps:
       - uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # Necesario para SonarCloud
+          fetch-depth: 10
 
       - uses: actions/setup-node@v4
         with:
-          node-version: 20
-          cache: 'npm'
-
-      - run: npm ci --legacy-peer-deps
+          node-version: ${{ env.NODE_VERSION }}
 
       - name: Validate commit messages
         run: |
           npm install --no-save @commitlint/{cli,config-conventional}
           npx commitlint --from=HEAD~10 --to=HEAD --verbose
-        continue-on-error: true
 
+  build-and-test:
+    runs-on: ubuntu-latest
+    needs: setup
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
-      - run: npx cypress install
+      - uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+          cache: npm
+          cache-dependency-path: ${{ env.CACHE_DEPENDENCY_PATH }}
 
-      # ✅ Lint y test con coverage
-      - name: Lint and Test with Coverage
-        run: |
-          npx nx run-many -t lint
-          npx nx test hunt-the-bishomalo --coverage --coverageReporters=lcov
+      - name: Install dependencies
+        run: npm ci --legacy-peer-deps
 
-      # ✅ Build Angular App
-      - name: Build App
+      - name: Install Cypress
+        run: npx cypress install
+
+      - name: Lint
+        run: npx nx run-many -t lint
+
+      - name: Test with coverage
+        run: npx nx test hunt-the-bishomalo --coverage --coverageReporters=lcov
+
+      - name: Build production
         run: npx nx build hunt-the-bishomalo --configuration=production
 
-      # ✅ SonarCloud Scan
-      - name: SonarCloud Scan
+      - name: Upload coverage to SonarCloud
         uses: SonarSource/sonarqube-scan-action@v5
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      
-      # ✅ Auto-versioning with standard-version changelog
-      - name: Create Release with standard-version
-        id: versioning
+
+  release:
+    if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+    runs-on: ubuntu-latest
+    needs: [validate, build-and-test]
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+          cache: npm
+          cache-dependency-path: ${{ env.CACHE_DEPENDENCY_PATH }}
+
+      - name: Install dependencies
+        run: npm ci --legacy-peer-deps
+
+      - name: Configure Git
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
-          git pull origin master --rebase
+      - name: Rebase master
+        run: git pull origin master --rebase
 
+      - name: Generate changelog and tag
+        id: versioning
+        run: |
           npm install --no-save standard-version
-
           npx standard-version --commit-all --no-verify
-
-          git push origin HEAD:master --follow-tags
           echo "new_tag=$(git describe --tags --abbrev=0)" >> $GITHUB_OUTPUT
 
+      - name: Push changes and tags
+        run: git push origin HEAD:master --follow-tags
+        env:
+          GITHUB_TOKEN: ${{ secrets.PAT_GITHUB }}
 
-      # ✅ Publicar GitHub Release
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ steps.versioning.outputs.new_tag }}
           generate_release_notes: true
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.PAT_GITHUB }}
